fix text alignement

--- a/src/app/actualites/[id]/id.module.scss
+++ b/src/app/actualites/[id]/id.module.scss
@@ -26,7 +26,7 @@
     .postDetails{
         width: 70%;
         h1{
-            font-size: 50px;
+            font-size:40px;
             margin-bottom: 1rem;
         }
         img{
