--- a/src/app/actualites/style.module.scss
+++ b/src/app/actualites/style.module.scss
@@ -90,13 +90,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 3rem 15rem;
+    padding: 3rem 8rem;
+
     // border: red solid 2px;
     div {
 
         width: 100%;
         background-color: #A1DFFF;
         height: 15rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: rgb(145, 145, 145);
+        h5{
+            font-weight: 100;
+            font-size: 2rem;
+        }
+      
 
     }
 
@@ -133,6 +143,90 @@
 
     }
 }
+
+.videos{
+    height: 70vh;
+    padding: 2rem 8rem;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0rem;
+    .videosContainer{
+        height: 100%;
+        width: 70%;
+        .mainVideos{
+            height: 74%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            div{
+                border: 5px white solid;
+                border-radius: 100%;
+                height: 100px;
+                width: 100px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .icone {
+                    font-size: 5rem;
+                    color: white;
+                        cursor: pointer;
+                }
+             
+            }
+         
+        }
+        .miniatureContainer{
+            height: 25%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .miniC{
+                width: 32.5%;
+                height: 100%;
+                margin: .5rem 0rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              div{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 30px;
+                width: 30px;
+                border: 3px solid white;
+                border-radius: 100%;
+                color: white;
+                font-size: 1.5rem;
+              }
+               
+            }
+        }
+    }
+    .articleContainer{
+        width: 28%;
+        height: 100%;
+     
+        a {
+            text-decoration: none;
+      
+            div{
+                width: 100%;
+                    div{
+                    height: 180px;
+                    }
+                h3{
+                   font-size: 15px;
+                   &:hover{
+                    color: #8E1F71;
+                   }
+                }
+            }
+        }
+    }
+
+}
+
+
 .archiveContainer{
     height: autp;
     padding: 2rem 8rem;
@@ -155,6 +249,7 @@
         }
     }
     .containerFlexer{
+     
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -166,12 +261,27 @@
         height: 90%;
         box-sizing: border-box;
         overflow: hidden;
-        width: 75%;
+        width: 70%;
+
+        a {
+            width: auto;
+            text-decoration: none;
+            color: black;
+        }
+
     }
     .verticalBanner{
         height: auto;
-        width: 23%;
+        width: 28%;
         background-color: #A1DFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        h5{
+            font-weight: 100;
+            font-size: 1.5rem;
+            color: rgb(163, 163, 163);
+        }
 
     }
 }
