--- a/src/components/minicard.module.scss
+++ b/src/components/minicard.module.scss
@@ -8,6 +8,7 @@
     h3{
         font-size: 12px;
         color: black;
+        font-weight: 600;
     }
     
     .imgWrapper{
